# securekeycpp-android

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/wsayan/secureapikey/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/wsayan/secureapikey/utils/: NativeAuthKeyInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aes.c  aes_helper.cpp  aes_helper.h  facade.cpp  jni_facade.cpp  xxtea.cpp
app/src/main/java/com/wsayan/secureapikey/: ApiKeyExtractor.kt  AppException.kt  MainActivity.kt  MainActivityViewModel.kt  NativeAuthKey.kt  SecureApiKeyApp.kt
app/src/main/java/com/wsayan/secureapikey/data/: DataModule.kt
app/src/main/java/com/wsayan/secureapikey/data/network/: ApiCallExt.kt  ApiConfig.kt  ApiService.kt  AuthKeyInterceptor.kt
app/src/main/java/com/wsayan/secureapikey/data/repository/: AnimeRepositoryImpl.kt
app/src/main/java/com/wsayan/secureapikey/di/: CoreModule.kt  KoinExt.kt
app/src/main/java/com/wsayan/secureapikey/domain/: DomainModule.kt  Resource.kt
app/src/main/java/com/wsayan/secureapikey/domain/model/: AnimeItem.kt
app/src/main/java/com/wsayan/secureapikey/domain/repository/: AnimeRepository.kt
app/src/main/java/com/wsayan/secureapikey/utils/: NativeAuthKey.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/test/java/com/wsayan/secureapikey/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+12 files in other folders)
